--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,23 @@ p#telemetry_overlay {
 canvas:focus {
     outline: none;
 }
+
+div#controls_submission {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.2);
+    width: 25%;
+    height: 25%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div#controls_submission p {
+    color: white;
+    font-size:xx-large;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
